--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "ecommerce-website-1",
+  "name": "delivery-food-app",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.15.0",
@@ -12,7 +11,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "reactstrap": "^9.1.4",
     "remixicon": "^2.5.0",
     "web-vitals": "^1.1.2"
